--- a/epixbiome.Rmd
+++ b/epixbiome.Rmd
@@ -1899,6 +1899,14 @@ post_H(filter(rhizo_H, pheno_name %in% top_rhizo$pheno_name[1:20]), 0.001, c("bl
 
 
 ggsave("figures/rhizo_top.png", width = 18, height = 12, dpi = 600)
+
+# select top taxa, and heritable in other plants and the EWAS 
+presentation = c("OTU-B_100", "OTU-B_285", "Order_Gemmatimonadales", "Family_Microbacteriaceae", "Order_Sphingobacteriales", "Family_Thermoactinomycetaceae", "Family_Legionallaceae", "Genus Flavobacterium")
+
+post_H(filter(rhizo_H, pheno_name %in% presentation), 0.001, c("black")) %>% 
+  insert_right(post_AS(filter(rhizo_AS, pheno_name %in% presentation), 0.001, c("red4", "black"), F), width = 0.6)
+
+ggsave("figures/rhizo_presentation.png", width = 18, height = 6, dpi = 600)
 ```
 
 
